[package]
name = "alloy-erc721"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1", features = [
    "network",
    "providers",
    "transports",
    "transport-http",
    "rpc",
    "rpc-types",
    "rpc-client",
    "contract",
    "sol-types",
] }
tokio = { version = "1.38.0", features = ["full"] }
